--- a/blocktionary-app/package.json
+++ b/blocktionary-app/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
-    "@farcaster/frame-sdk": "^0.1.8",
+    "@farcaster/miniapp-sdk": "^0.1.8",
+    "@google/generative-ai": "^0.24.1",
+    "@tanstack/react-query": "^5",
     "@upstash/redis": "^1.34.4",
+    "groq-sdk": "^0.30.0",
     "next": "^15.3.3",
+    "openai": "^4.104.0",
     "react": "^18",
     "react-dom": "^18",
-    "@tanstack/react-query": "^5",
     "viem": "^2.27.2",
     "wagmi": "^2.16.0"
   },
@@ -29,8 +32,8 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
