--- a/blocktionary-app/package.json
+++ b/blocktionary-app/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "latest",
+    "@coinbase/onchainkit": "^0.38.19",
+    "@farcaster/frame-sdk": "^0.1.9",
     "@farcaster/miniapp-sdk": "^0.1.8",
     "@google/generative-ai": "^0.24.1",
-    "@tanstack/react-query": "^5",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.85.5",
     "@upstash/redis": "^1.34.4",
     "groq-sdk": "^0.30.0",
     "next": "^15.3.3",
     "openai": "^4.104.0",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.27.2",
-    "wagmi": "^2.16.0"
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.8"
   },
   "devDependencies": {
     "@types/node": "^22",
