--- a/base-mini-app/blocktionary_/package.json
+++ b/base-mini-app/blocktionary_/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
@@ -31,7 +32,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "scripts": {
-    "vercel-build": "next build"
-  }
+
 }
